# To-Do-list-CLI

./: README.md  pyproject.toml
src/resolution_week1_doeygirl93/: main.py
