[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolution_week1_doeygirl93"
version = "0.0.1"
description = "A CLI to do list!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
todo = "resolution_week1_doeygirl93.main:main"